--- a/urls.cfg
+++ b/urls.cfg
@@ -1,1 +1,6 @@
-google=https://google.com
+google=https://www.google.com
+flowlist=https://www.flowlist.xyz
+facebook=https://www.facebook.com
+twitter=https://www.twitter.com
+instagram=https://www.instagram.com
+youtube=https://www.youtube.com
