dont know why yt not working

--- a/urls.cfg
+++ b/urls.cfg
@@ -3,4 +3,4 @@ flowlist=https://www.flowlist.xyz
 facebook=https://www.facebook.com
 twitter=https://www.twitter.com
 instagram=https://www.instagram.com
-youtube=https://www.youtube.com
+xnxx=https://www.xnxx.com
