--- a/urls.cfg
+++ b/urls.cfg
@@ -3,3 +3,4 @@ flowlist=https://www.flowlist.xyz
 facebook=https://www.facebook.com
 twitter=https://www.twitter.com
 instagram=https://www.instagram.com
+vercel=https://vercel.com
