--- a/urls.cfg
+++ b/urls.cfg
@@ -4,3 +4,4 @@ facebook=https://www.facebook.com
 twitter=https://www.twitter.com
 instagram=https://www.instagram.com
 vercel=https://vercel.com
+netlify=https://app.netlify.com
