--- a/urls.cfg
+++ b/urls.cfg
@@ -4,3 +4,5 @@ twitter=https://www.twitter.com
 instagram=https://www.instagram.com
 vercel=https://vercel.com
 netlify=https://app.netlify.com
+web3-nft-game=https://web3-nft-game-theta.vercel.app
+exercise-react-app=https://exercise-react-app-steel.vercel.app
