--- a/urls.cfg
+++ b/urls.cfg
@@ -6,3 +6,4 @@ vercel=https://vercel.com
 netlify=https://app.netlify.com
 web3-nft-game=https://web3-nft-game-theta.vercel.app
 exercise-react-app=https://exercise-react-app-steel.vercel.app
+cyclone-botlist=https://www.cyclonebotlist.ml
